gccida/g3/build_string
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1213:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1220:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1221:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1236:19: error: expected expression
v4 = ( tree_node *)ggc_alloc( v3); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1236:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)ggc_alloc( v3); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1272:19: error: expected expression
v4 = ( tree_node *)ggc_alloc( v15); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1272:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)ggc_alloc( v15); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1277:20: error: expected expression
v11 = ( tree_node *)ggc_alloc( 0xD0uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1277:9: error: use of undeclared identifier 'tree_node'
v11 = ( tree_node *)ggc_alloc( 0xD0uLL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1288:20: error: expected expression
v12 = ( tree_node *)ggc_alloc( 0xA8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1288:9: error: use of undeclared identifier 'tree_node'
v12 = ( tree_node *)ggc_alloc( 0xA8uLL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1313:19: error: expected expression
v4 = ( tree_node *)ggc_alloc( v10); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/tree.c:1313:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)ggc_alloc( v10); 
       ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_string/src/obj/tree.o] Error 1
